--- a/public/styles.css
+++ b/public/styles.css
@@ -51,7 +51,7 @@ p {
   color: #5c476f;
 }
 
-form {
+form.item {
   text-align: center;
   margin-left: 20px;
 }
@@ -74,7 +74,6 @@ button {
   background-color: #5c476f;
   color: #eeeeee;
   font-size: 30px;
-  padding-bottom: 6px;
   border-width: 0;
 }
 
